Fixed navbar z-index to position above input

--- a/styling/main.css
+++ b/styling/main.css
@@ -30,6 +30,7 @@ body {
 }
 
 .navbar {
+  z-index: 10;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -153,7 +154,7 @@ body {
 
 .typer .quote-input {
   width: 100%;
-  height: 90%;
+  height: 100%;
   bottom: 0;
   cursor: default;
   background: none;
